--- a/blog_data/blogs.yml
+++ b/blog_data/blogs.yml
@@ -14,6 +14,7 @@
     Beyond Transparency and Fairness
 - title: "UV for python environment management"
   path: https://open.substack.com/pub/aipndr/p/uv-for-python-environment-management?r=3z45q3&utm_campaign=post&utm_medium=web&showWelcomeOnShare=true
+  image: uv.png
   date: 2024-12-28
   categories: [uv, python]
   description: |
